--- a/styles1.css
+++ b/styles1.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background: rgb(8, 51, 95);
   background: linear-gradient(
     315deg,
@@ -6,17 +6,17 @@ body {
     rgba(6, 78, 144, 1) 57%,
     rgba(32, 113, 130, 1) 100%
   );
-}
+} */
 
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 
-div {
+/* div {
   display: inline-block;
-}
+} */
 
-h1 {
+/* h1 {
   grid-column: 2/2;
   font-family: "Playfair Display";
   margin: auto;
@@ -25,16 +25,16 @@ h1 {
   padding: 70px 0;
   width: 100%;
   font-size: 35px;
-}
+} */
 
-h2 {
+/* h2 {
   font-family: "Playfair Display";
   text-align: left;
   color: #ffffff;
   border-bottom: 1px solid white;
   font-size: 20px;
   padding: 0.2em 0.8em;
-}
+} */
 
 .header {
   display: grid;
@@ -45,7 +45,7 @@ h2 {
   background-position: center;
 }
 
-.topnav {
+/* .topnav {
   width: 100%;
   background-color: #064e90;
   display: flex;
@@ -66,7 +66,7 @@ h2 {
   background-color: rgba(171, 195, 206, 1);
   color: black;
   cursor: pointer;
-}
+} */
 
 section {
   background-color: rgba(255, 255, 255, 0.05);
@@ -76,14 +76,14 @@ section {
   margin-top: 10px;
 }
 
-#aboutMeContainer {
+/* #aboutMeContainer {
   display: grid;
   align-items: normal;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 5px;
-}
+} */
 
-#aboutMeContainer img {
+/* #aboutMeContainer img {
   width: 160px;
   max-width: 100%;
   max-height: 100%;
@@ -91,29 +91,29 @@ section {
   grid-area: 1 / 3;
   border-radius: 50px;
   padding-top: 5px;
-}
+} */
 
-#aboutMeContainer p {
+/* #aboutMeContainer p {
   align-self: center;
   grid-area: 1 / 1 / span 1 / span 2;
   font-size: 20px;
-}
+} */
 
-p {
+/* p {
   padding: 10px;
   margin-left: 10px;
   color: #ffffff;
   font-size: 20px;
-}
+} */
 
-li {
+/* li {
   color: #d4e6ed;
   font-size: 17px;
   margin-left: 40px;
   margin-right: 50px;
   margin-bottom: 20px;
   list-style-type: circle;
-}
+} */
 
 footer {
   position: fixed;
